# jira-unfurl-bot

./: Dockerfile  README.md  build_deploy.sh  jira-unfurl-bot.py  pyproject.toml  renovate.json  requirements.txt
.tekton/: jira-unfurl-bot-saas-main-pull-request.yaml  jira-unfurl-bot-saas-main-push.yaml
openshift/: template.yaml
