[project]
name = "jira-unfurl-bot"
version = "0.0.1"
requires-python = ">=3.12"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
fix = true
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
    #missing docstring warnings
    "D100", #   Missing docstring in public module	
    "D103", #   Missing docstring in public function
    "D400", #   First line should end with a period
    "D415", #   First line should end with a period, question mark, or exclamation point
    "G004", #   Logging-f-string
]
